--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,10 @@
   font-family: "Montserrat", sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 li {
   list-style-type: none;
 }
@@ -26,6 +30,13 @@ button {
 
 section {
   background-color: rgb(245, 245, 245);
+  transform: all 300ms ease;
+}
+
+.modal--open .modal {
+  z-index: 60;
+  box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
+  visibility: visible;
 }
 
 input,
@@ -53,20 +64,22 @@ label {
   font-weight: bold;
 }
 
-
-input:hover, textarea:hover {
+input:hover,
+textarea:hover {
   border-color: #dcdfe6;
 }
 
-input:focus, textarea:focus {
+input:focus,
+textarea:focus {
   border-image: linear-gradient(
-    to right,
-    #f30d0d,
-    #f25403,
-    #ef7911,
-    #ec972c,
-    #f30d0d
-  )1;
+      to right,
+      #f30d0d,
+      #f25403,
+      #ef7911,
+      #ec972c,
+      #f30d0d
+    )
+    1;
   border-bottom: 2px solid;
 }
 
@@ -119,6 +132,36 @@ input:focus, textarea:focus {
 .link__hover-effect:hover::after {
   left: 0;
   width: 100%;
+}
+
+.dark-theme .title,
+.dark-theme .section__title,
+.dark-theme .nav__link--anchor,
+.dark-theme .fa-adjust,
+.dark-theme .header__para {
+  color: #fff;
+}
+
+.dark-theme section {
+  background-color: #242424;
+}
+
+.dark-theme #personal-logo {
+  filter: invert(1);
+}
+
+.dark-theme .scroll__icon {
+  border-color: #fff;
+}
+
+.dark-theme .scroll__icon:after,
+.dark-theme .link__hover-effect--black::after {
+  background-color: #fff;
+}
+
+.dark-theme .mail__btn {
+  background-color: #fff;
+  color: #242424;
 }
 
 /* LANDING PAGE */
@@ -214,7 +257,7 @@ input:focus, textarea:focus {
   bottom: 32px;
   right: 40px;
   z-index: 100;
-  box-shadow: 0 12px 30px 0 rgb(0, 0, 0, 0.28);
+  box-shadow: 0 12px 30px 0 rgb(0, 0, 0, 0.45);
 }
 
 .scroll {
@@ -370,10 +413,12 @@ nav {
   width: 90%;
   max-width: 1100px;
   height: 700px;
-  box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
   border-radius: 20px;
   overflow: hidden;
   display: flex;
+  visibility: hidden;
+  transition: visibility 1s, z-index 1s, box-shadow 0.5s ease;
+  z-index: -1;
 }
 
 .modal__half {
@@ -382,15 +427,24 @@ nav {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  position: relative;
+  transition: all 300ms ease-in;
+}
+
+.modal--open .modal__about,
+.modal--open .modal__contact {
+  transform: translateX(0%);
 }
 
 .modal__about {
   background-color: rgb(245, 245, 245);
+  transform: translateX(-110%);
 }
 
 .modal__contact {
   background-color: #242424;
   color: #fff;
+  transform: translateX(110%);
 }
 
 .modal__title {
@@ -479,9 +533,79 @@ nav {
   color: #f30d0d;
 }
 
+.modal__overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  z-index: -1;
+}
+
+.modal__overlay--loading {
+  background-color: #242424;
+  font-size: 80px;
+}
+
+.modal__overlay--success {
+  background-color: #4bb543;
+  font-size: 40px;
+  font-weight: bold;
+  text-align: center;
+  padding: 24px;
+}
+
+.modal__overlay--visible {
+  z-index: 1;
+  display: flex;
+}
+
+.fa-spinner {
+  animation: rotate 750ms infinite linear;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.modal__exit {
+  position: absolute;
+  top: 30px;
+  right: 40px;
+  color: #fff;
+  font-size: 36px;
+  z-index: 100;
+}
+
+nav,
+.scroll,
+header {
+  opacity: 1;
+  visibility: visible;
+  transition: all 600ms 800ms;
+}
+
+.modal--open nav,
+.modal--open .scroll,
+.modal--open header {
+  opacity: 0;
+  visibility: hidden;
+  transition: all 400ms 200ms;
+}
+
 /* FOOTER */
 
 footer {
+  position: relative;
   background-color: #242424;
   display: flex;
   padding: 6% 0%;
@@ -510,4 +634,111 @@ footer {
 .footer__social--link,
 .footer__copyright {
   color: #fff;
+}
+
+/* SHAPES */
+.shape {
+  position: fixed;
+}
+
+.shape--0 {
+  top: 15vh;
+  left: 5vw;
+}
+
+.shape--1 {
+  top: 15vh;
+  left: 50vw;
+}
+
+.shape--2 {
+  top: 15vh;
+  left: 80vw;
+}
+
+.shape--3 {
+  top: 50vh;
+  left: 5vw;
+}
+
+.shape--4 {
+  top: 50vh;
+  left: 50vw;
+}
+
+.shape--5 {
+  top: 50vh;
+  left: 80vw;
+}
+
+.shape--6 {
+  top: 80vh;
+  left: 5vw;
+}
+
+.shape--7 {
+  top: 80vh;
+  left: 50vw;
+}
+
+.shape--8 {
+  top: 80vh;
+  left: 80vw;
+}
+
+/* SMALL PHONES, TABLETS, LARGE SMART PHONES */
+@media (max-width: 768px) {
+  .title {
+    font-size: 80px;
+  }
+
+  .header__para {
+    font-size: 20px;
+  }
+
+  .modal {
+    top: 0;
+    left: 0;
+    height: auto;
+    transform: none;
+    width: 100%;
+    flex-direction: column-reverse;
+    border-radius: 0;
+  }
+
+  .modal__half {
+    width: 100%;
+  }
+
+}
+
+
+/* Small Phones */
+@media (max-width: 480px) {
+  .title {
+    font-size: 52px;
+  }
+
+  .header__para {
+    font-style: 18px;
+  }
+.nav__link:first-child {
+  display: none;
+}
+
+.project__description--para {
+  display: none;
+}
+
+.project__description {
+  left: 0;
+  padding: 0;
+  width: 100%;
+  text-align: center;
+}
+
+.project__description--sub-title {
+  margin-bottom: 8px;
+}
+
 }
