--- a/styles.css
+++ b/styles.css
@@ -636,6 +636,25 @@ footer {
   color: #fff;
 }
 
+.footer__logo--popper {
+  position: absolute;
+  right: 12px;
+  top: 80px;
+  font-weight: 700;
+  opacity: 0;
+  transition: all 300ms ease;
+  color: #fff;
+}
+
+.footer__anchor {
+  position: relative;
+}
+
+.footer__anchor:hover .footer__logo--popper {
+  transform: translateX(60px);
+  opacity: 1;
+}
+
 /* SHAPES */
 .shape {
   position: fixed;
