--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ button {
 
 section {
   background-color: rgb(245, 245, 245);
-  transform: all 300ms ease;
+  transition: all 300ms ease;
 }
 
 .modal--open .modal {
@@ -150,12 +150,20 @@ textarea:focus {
   filter: invert(1);
 }
 
+.dark-theme .footer__logo--img {
+  filter: invert(0);
+}
+
+.dark-theme footer {
+  background-color: white;
+}
+
 .dark-theme .scroll__icon {
   border-color: #fff;
 }
 
 .dark-theme .scroll__icon:after,
-.dark-theme .link__hover-effect--black::after {
+.dark-theme .link__hover-effect--black:after {
   background-color: #fff;
 }
 
@@ -164,6 +172,11 @@ textarea:focus {
   color: #242424;
 }
 
+.dark-theme .footer__social--link,
+.dark-theme .footer__copyright,
+.dark-theme .footer__logo--popper {
+  color: black;
+}
 /* LANDING PAGE */
 
 #landing-page {
@@ -222,7 +235,8 @@ textarea:focus {
 }
 
 .sub-title,
-.green {
+.green,
+.letter {
   animation: background-pan 3s linear infinite;
   background-size: 200%;
   background-image: linear-gradient(
@@ -383,6 +397,7 @@ nav {
   width: 100%;
   height: 100%;
   background-color: #1c1d25;
+  transition: all ease 450ms;
   opacity: 0.7;
 }
 
@@ -599,7 +614,7 @@ header {
 .modal--open header {
   opacity: 0;
   visibility: hidden;
-  transition: all 400ms 200ms;
+  transition: all 400ms;
 }
 
 /* FOOTER */
@@ -681,6 +696,7 @@ footer {
 }
 
 .shape--4 {
+  z-index: 10;
   top: 50vh;
   left: 50vw;
 }
@@ -728,9 +744,7 @@ footer {
   .modal__half {
     width: 100%;
   }
-
 }
-
 
 /* Small Phones */
 @media (max-width: 480px) {
@@ -741,23 +755,72 @@ footer {
   .header__para {
     font-style: 18px;
   }
-.nav__link:first-child {
-  display: none;
+  .nav__link:first-child {
+    display: none;
+  }
+
+  .project__description--para {
+    display: none;
+  }
+
+  .project__description {
+    left: 0;
+    padding: 0;
+    width: 100%;
+    text-align: center;
+  }
+
+  .project__description--sub-title {
+    margin-bottom: 8px;
+  }
 }
 
-.project__description--para {
-  display: none;
+@keyframes float {
+  from, to
+   {
+    transform: translateY(-0%);
+  }
+
+  50% {
+    transform: translateY(-10%);
+  }
 }
 
-.project__description {
-  left: 0;
-  padding: 0;
-  width: 100%;
-  text-align: center;
+.fancy span {
+  display: inline-block;
 }
 
-.project__description--sub-title {
-  margin-bottom: 8px;
+
+.fancy > .outer {
+  transition: transform 350ms ease;
 }
 
+.fancy:hover > .outer {
+  transition-duration: 800ms;
+}
+
+.fancy:hover > .outer > .inner {
+  animation: float 4s ease infinite;
+}
+
+.fancy:hover > .outer:nth-child(1) {
+  transform: translate(0%, -30%) rotate(-4deg);
+}
+.fancy:hover > .outer:nth-child(2) {
+  transform: translate(-40%, 20%) rotate(4deg);
+}
+.fancy:hover > .outer:nth-child(3) {
+  transform: translate(-10%, 60%) rotate(-6deg);
+}
+.fancy:hover > .outer:nth-child(4) {
+  transform: translate(0%, 8%) rotate(-8deg);
+}
+.fancy:hover > .outer:nth-child(5) {
+  transform: translate(0%, -20%) rotate(-3deg);
+}
+.fancy:hover > .outer:nth-child(6) {
+  transform: translate(0%, 20%) rotate(-3deg);
+}
+.fancy:hover > .outer:nth-child(7) {
+  transform: translate(10px, 10px) rotate(35deg);
 }
